# space

./: Cargo.toml  README.md  index.html
.github/workflows/: build-artifacts.yml  deploy-pages.yml  quality.yml
assets/config/stage_a/: economy_pressure.toml  galaxy.toml  market.toml  time_units.toml
crates/gatebound_app/: Cargo.toml
crates/gatebound_app/src/: app_shell.rs  app_tests.rs  hud.rs  lib.rs  main.rs  render_world.rs  sim_runtime.rs  view_mode.rs
crates/gatebound_app/src/features/: finance.rs  markets.rs  missions.rs  mod.rs  ships.rs  stations.rs
crates/gatebound_app/src/input/: camera.rs
crates/gatebound_app/src/render/: world.rs
crates/gatebound_app/src/runtime/: mod.rs  save.rs  sim.rs
crates/gatebound_app/src/ui/hud/: chrome.rs  context.rs  corporations.rs  finance.rs  fleet.rs  labels.rs  markets.rs  messages.rs  missions.rs  missions_snapshot.rs  mod.rs  policies.rs  render.rs  save_menu.rs  shared.rs  ships.rs  snapshot.rs  stations.rs  systems.rs
crates/gatebound_core/: Cargo.toml
crates/gatebound_core/src/: lib.rs
crates/gatebound_domain/: Cargo.toml
crates/gatebound_domain/src/: cargo.rs  company.rs  config.rs  contracts.rs  errors.rs  fleet.rs  ids.rs  leases.rs  lib.rs  loans.rs  market.rs  metrics.rs  missions.rs  routing.rs  world.rs
crates/gatebound_domain/tests/: domain_api.rs
crates/gatebound_lab/: Cargo.toml
crates/gatebound_lab/src/: lib.rs  main.rs
crates/gatebound_sim/: Cargo.toml
crates/gatebound_sim/src/: config.rs  lib.rs  snapshot.rs  test_support.rs  views.rs
crates/gatebound_sim/src/simulation/: contracts.rs  economy.rs  finance.rs  leases.rs  lifecycle.rs  milestones.rs  missions.rs  mod.rs  movement.rs  npc.rs  queries.rs  recovery.rs  risk.rs  routing.rs  state.rs  storage.rs  test_api.rs  tests.rs  trading.rs
docs/: Idea.md  todo.md
docs/plans/: 2026-03-06-left-panel-buttons.md  stage-a-closure-v2.md  stage-a-closure-v3.md  stage-a-economy-pressure-v1.md  stage-a-headless-v1.md
