[workspace]
members = [
    "crates/gatebound_domain",
    "crates/gatebound_sim",
    "crates/gatebound_app",
    "crates/gatebound_lab",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Gatebound Team"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
