[package]
name = "gatebound_app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gatebound_app"
path = "src/main.rs"

[features]
default = ["stage_a"]
stage_a = []

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
gatebound_domain = { path = "../gatebound_domain" }
gatebound_sim = { path = "../gatebound_sim" }

[dev-dependencies]
gatebound_domain = { path = "../gatebound_domain" }
gatebound_sim = { path = "../gatebound_sim", features = ["test-support"] }

[lints]
workspace = true
