[package]
name = "gatebound_domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "gatebound_domain"
path = "src/lib.rs"

[features]
default = ["stage_a"]
stage_a = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
