[package]
name = "gatebound_lab"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "gatebound_lab"
path = "src/lib.rs"

[[bin]]
name = "gatebound_lab"
path = "src/main.rs"

[dependencies]
gatebound_domain = { path = "../gatebound_domain" }
gatebound_sim = { path = "../gatebound_sim" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
