[package]
name = "gatebound_sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "gatebound_sim"
path = "src/lib.rs"

[features]
default = ["stage_a"]
stage_a = []
test-support = []

[dependencies]
gatebound_domain = { path = "../gatebound_domain" }
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.22.27", features = ["serde"] }

[lints]
workspace = true
